[package]
name = "atlas-logging-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize_serde = ["serde"]
serialize_capnp = []

[dependencies]
tracing = "*"

anyhow = "1.0"
thiserror = "1.0"

atlas-common = { path = "../Atlas-Common" }
atlas-communication = { path = "../Atlas-Communication" }
atlas-core = { path = "../Atlas-Core" }

atlas-metrics = { path = "../Atlas-Metrics" }
serde = { version = "*", optional = true }